--- a/src/sadna-backend/SadnaExpress/SadnaExpress.csproj
+++ b/src/sadna-backend/SadnaExpress/SadnaExpress.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.7.1\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
@@ -77,6 +78,11 @@
     <Compile Include="API\SignalR\SignalRServiceHost.cs" />
     <Compile Include="DataLayer\DatabaseContext.cs" />
     <Compile Include="DataLayer\DBHandler.cs" />
+    <Compile Include="db_a995b0_sadnadbver4DataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>db_a995b0_sadnadbver4DataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DomainLayer\Store\Policy\ConditionDB.cs" />
     <Compile Include="DomainLayer\Store\Policy\PolicyDB.cs" />
     <Compile Include="DomainLayer\User\InitializeSystem.cs" />
@@ -120,6 +126,11 @@
     <Compile Include="Migrations\DatabaseContextModelSnapshot.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="ServiceLayer\IStoreManager.cs" />
     <Compile Include="ServiceLayer\IUserManager.cs" />
     <Compile Include="ServiceLayer\SModels\SBid.cs" />
@@ -149,6 +160,12 @@
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.9" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Owin" Version="5.2.9" />
     <PackageReference Include="Microsoft.AspNet.WebApi.OwinSelfHost" Version="5.2.9" />
+    <PackageReference Include="Microsoft.Data.SqlClient">
+      <Version>5.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Data.Sqlite">
+      <Version>3.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore">
       <Version>3.1.0</Version>
     </PackageReference>
@@ -175,12 +192,30 @@
     <PackageReference Include="System.ComponentModel.Annotations">
       <Version>4.4.1</Version>
     </PackageReference>
+    <PackageReference Include="System.Data.SqlClient">
+      <Version>4.4.0</Version>
+    </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
       <Version>6.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="db_a995b0_sadnadbver4DataSet.xsc">
+      <DependentUpon>db_a995b0_sadnadbver4DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="db_a995b0_sadnadbver4DataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>db_a995b0_sadnadbver4DataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="db_a995b0_sadnadbver4DataSet.xss">
+      <DependentUpon>db_a995b0_sadnadbver4DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="data.json" />
